--- a/deepseek_html_20250609_614cfc.html
+++ b/deepseek_html_20250609_614cfc.html
@@ -348,12 +348,10 @@
                 <p>Transforming businesses through technology since 2016</p>
                 
                 <div class="social-links">
-                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.linkedin.com/company/sevendyne-linkedin/"><i class="fab fa-linkedin-in"></i></a>
                 </div>
                 
-                <p>&copy; 2023 Sevendyne Consulting. All rights reserved.</p>
+                <p>&copy; 2025 Sevendyne Consulting. All rights reserved.</p>
             </div>
         </div>
     </footer>
