--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sevendyne | IT Consultancy</title>
+    <title>Sevendyne | IT Consultancy Company</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -288,7 +288,7 @@
             <nav class="navbar">
                 <a href="#" class="logo">
                     <i class="fas fa-laptop-code fa-2x" style="color: #1a2a6c;"></i>
-                    <h1>Sevendyne <span>Consulting</span></h1>
+                    <h1>Sevendyne <span>Consultancy Services LLP</span></h1>
                 </a>
                 <ul class="nav-links">
                     <li><a href="#about">About Us</a></li>
