--- a/index.html
+++ b/index.html
@@ -400,27 +400,30 @@
                 <div class="service-icon">
                     <i class="fas fa-laptop-code"></i>
                 </div>
-                <h3>App Solutions</h3>
-                <p>Custom application development services tailored to your business needs. We build robust, scalable solutions that drive efficiency and innovation for your organization.</p>
-                <a href="https://apps.sevendyne.com" class="btn" target="_blank">Visit App Site</a>
+                <h3>SaaS Solutions</h3>
+                <h5>Empowering Industries with Smart Business Applications</h5>
+ <p>We provide powerful, customizable SaaS solutions including ERP systems like Odoo, CRM platforms, and other industrial-grade apps tailored to streamline operations, manage resources, and enhance productivity across your organization.</p>
+                <a href="https://saas.sevendyne.com" class="btn" target="_blank">Visit SAAS Solutions</a>
             </div>
         
             <div class="service-card">
                 <div class="service-icon">
                     <i class="fas fa-project-diagram"></i>
                 </div>
-                <h3>Network Solutions</h3>
-                <p>Strategic lead generation and network development services. We create pathways to connect you with valuable partners, clients, and opportunities in your industry.</p>
-                <a href="https://networks.sevendyne.com" class="btn" target="_blank">Visit Network Site</a>
+                <h3>Skill Solutions</h3>
+                <h5>Training the Next Generation of Tech Talent</h5>
+ <p>We offer specialized training programs in Fullstack Development, C++, Java, Python, and more. Our goal is to equip individuals with practical, in-demand skills and real-world project experience to make them job-ready and future-proof in the tech industry.</p>
+                <a href="https://skills.sevendyne.com" class="btn" target="_blank">Visit Skill Solutions</a>
             </div>
         
             <div class="service-card">
                 <div class="service-icon">
                     <i class="fas fa-users"></i>
                 </div>
-                <h3>Talent Solutions</h3>
-                <p>Comprehensive staffing and resource management services. We identify, recruit, and place top-tier talent to help you build high-performing teams that drive success.</p>
-                <a href="https://staffs.sevendyne.com" class="btn" target="_blank">Visit Staff Site</a>
+                <h3>Staffing Solutions</h3>
+               <h5>Complete Workforce & Compliance Management</h5>
+ <p>Our comprehensive staffing services include talent acquisition, payroll processing, employee onboarding, HRMS setup, tax compliance (TDS, PF, ESI), contractor management, and accounting support. We handle everything from recruitment to regulatory filings, so you can focus on scaling your business.</p>
+                <a href="https://staffings.sevendyne.com" class="btn" target="_blank">Visit Staffing Solutions</a>
             </div>
         </div>
 
