--- a/index.html
+++ b/index.html
@@ -444,17 +444,17 @@
             <div class="clients-container">
                 <!-- UK Client Card -->
                 <div class="client-card">
-                    <div class="client-flag uk"></div>
+                    <div class="client-flag sg"></div>
                     <h3>United Kingdom</h3>
-                    <div class="client-tech">C++ Development</div>
-                    <p>Provided specialized C++ developers to a leading fintech company in London, enhancing their algorithmic trading platform performance by 37%.</p>
+                    <div class="client-tech">PHP Development</div>
+                    <p>Provided specialized PHP developers to a leading fintech company in Singapore, enhancing their payment & CRM apps.</p>
                     <div class="stats">
                         <div class="stat-item">
-                            <div class="stat-number">15</div>
+                            <div class="stat-number">5+</div>
                             <div class="stat-label">Developers</div>
                         </div>
                         <div class="stat-item">
-                            <div class="stat-number">2.5y</div>
+                            <div class="stat-number">2+y</div>
                             <div class="stat-label">Duration</div>
                         </div>
                     </div>
@@ -465,29 +465,29 @@
                     <div class="client-flag de"></div>
                     <h3>Germany</h3>
                     <div class="client-tech">Fullstack Node.js</div>
-                    <p>Staffed a complete development team for a Munich-based automotive tech startup, delivering a scalable IoT platform in record time.</p>
+                    <p>Staffed a complete development team for German based tech startups, delivering a scalable IoT platform in record time.</p>
                     <div class="stats">
                         <div class="stat-item">
-                            <div class="stat-number">12</div>
+                            <div class="stat-number">3+</div>
                             <div class="stat-label">Engineers</div>
                         </div>
                         <div class="stat-item">
-                            <div class="stat-number">98%</div>
-                            <div class="stat-label">Retention</div>
+                            <div class="stat-number">3+y</div>
+                            <div class="stat-label">Duration</div>
                         </div>
                     </div>
                 </div>
                 
                 <!-- Singapore Client Card -->
                 <div class="client-card">
-                    <div class="client-flag sg"></div>
+                    <div class="client-flag uk"></div>
                     <h3>Singapore</h3>
-                    <div class="client-tech">Java & Solidworks</div>
-                    <p>Deployed specialized Java developers and Solidworks engineers to support a major industrial automation project for a government initiative.</p>
+                    <div class="client-tech">Engineering</div>
+                    <p>Deployed specialized SCADA and Solidworks engineers to support a major industrial automation project for a government initiative.</p>
                     <div class="stats">
                         <div class="stat-item">
-                            <div class="stat-number">23</div>
-                            <div class="stat-label">Experts</div>
+                            <div class="stat-number">5+y</div>
+                            <div class="stat-label">Duration</div>
                         </div>
                         <div class="stat-item">
                             <div class="stat-number">4.9/5</div>
