--- a/index.html
+++ b/index.html
@@ -483,8 +483,7 @@
 
                  <div class="client-card">
                     <div class="client-tech">SaaS Technologies</div>
-                    <p>Managing SolidWorks and SCADA engineering teams with our cloud-based HRMS staffing platform.</p>
-                    
+                    <p>Providing cloud-based SaaS solutions for client staffing and related operations using platforms like Zoho HRMS, AWS, and other SaaS tools</p>
                     <div class="tech-tags">
                         <span class="tech-tag">Zoho People</span>
                         <span class="tech-tag">Staffing Payroll</span>
