--- a/index.html
+++ b/index.html
@@ -420,12 +420,7 @@
                 </a>
                 <ul class="nav-links">
                     <li><a href="#about">About Us</a></li>
-                     <li><a href="#services">Our Works</a>
-                      <ul>
-                        <li><a href="https://staffs.sevendyne.com" target="_blank">Staffing</a></li>
-                        <li><a href="https://skills.sevendyne.com" target="_blank">Skills Training</a></li>
-                        <li><a href="https://saas.sevendyne.com" target="_blank">SaaS Services</a></li>
-                      </ul>
+                     <li><a href="#works">Client Works</a>
                     </li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -460,7 +455,7 @@
         </section>
 
         <!-- UPDATED CLIENT WORKS SECTION -->
-        <section id="services" class="section">
+        <section id="works" class="section">
             <div class="section-title">
                 <h2>Our Works</h2>
             </div>
