--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                     <li><a href="#about">About Us</a></li>
                      <li><a href="#works">Client Works</a>
                     </li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#contact">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
