--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                         <span class="tech-tag">Design Engineers</span>
                         <span class="tech-tag">Automation Engineers</span>
                     </div>
-                    <a href="https://staffs.sevendyne.com" class="learn-more" target="_blank">Visit Staffing Site</a>
+                    <a href="https://staffs.sevendyne.com" class="learn-more" target="_blank">Explore Staffs</a>
                 </div>
                  
                 <div class="client-card">
@@ -479,7 +479,7 @@
                         <span class="tech-tag">Java</span>
                         <span class="tech-tag">.NET</span>
                     </div>   
-                    <a href="https://skills.sevendyne.com" class="learn-more" target="_blank">Visit Skills Site</a>            
+                    <a href="https://skills.sevendyne.com" class="learn-more" target="_blank">Explore Skills</a>            
                 </div>
         
                 <div class="client-card">
@@ -490,7 +490,7 @@
                         <span class="tech-tag">Staffing Payroll</span>
                         <span class="tech-tag">Tax Compliance</span>
                     </div>
-                    <a href="https://saas.sevendyne.com" class="learn-more" target="_blank">Visit SaaS Site</a>
+                    <a href="https://saas.sevendyne.com" class="learn-more" target="_blank">Explore SaaS</a>
                 </div>
             </div>
         </section>
