--- a/index.html
+++ b/index.html
@@ -419,9 +419,8 @@
                     <h1>Sevendyne <span>Consultancy Services LLP</span></h1>
                 </a>
                 <ul class="nav-links">
+                     <li><a href="#works">Our Works</a></li>
                     <li><a href="#about">About Us</a></li>
-                     <li><a href="#works">Client Works</a>
-                    </li>
                     <li><a href="#contact">Contact Us</a></li>
                 </ul>
             </nav>
