--- a/skills.html
+++ b/skills.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sevendyne - Training & Skills Development</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
-  <link rel="stylesheet" href="style_pages.css"/>
+  <link rel="stylesheet" href="stylepages.css"/>
 </head>
 <body>
   <header>
