--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <span class="tech-tag">Design Engineers</span>
                         <span class="tech-tag">Automation Engineers</span>
                     </div>
-                    <a href="https://staffs.sevendyne.com" class="learn-more" target="_blank">Explore Staffs</a>
+                    <a href="https://sevendyne.com/staffs.html" class="learn-more" target="_blank">Explore Staffs</a>
                 </div>
                  
                 <div class="client-card">
@@ -59,18 +59,18 @@
                         <span class="tech-tag">Java</span>
                         <span class="tech-tag">.NET</span>
                     </div>   
-                    <a href="https://skills.sevendyne.com" class="learn-more" target="_blank">Explore Skills</a>            
+                    <a href="https://sevendyne.com/skills.html" class="learn-more" target="_blank">Explore Skills</a>            
                 </div>
         
                 <div class="client-card">
                     <div class="client-tech">SaaS Technologies</div>
                     <p>Providing cloud-based SaaS solutions for client staffing and related operations using platforms like Zoho HRMS, AWS, and other SaaS tools.</p>
                     <div class="tech-tags">
+                        <span class="tech-tag">Odoo ERP</span>
+                        <span class="tech-tag">AWS Cloud</span>
                         <span class="tech-tag">Zoho People</span>
-                        <span class="tech-tag">Staffing Payroll</span>
-                        <span class="tech-tag">Tax Compliance</span>
                     </div>
-                    <a href="https://saas.sevendyne.com" class="learn-more" target="_blank">Explore SaaS</a>
+                    <a href="https://sevendyne.com/skills.html" class="learn-more" target="_blank">Explore SaaS</a>
                 </div>
             </div>
         </section>
