--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <span class="tech-tag">Cloud Architects</span>
                         <span class="tech-tag">Design Specialists</span>
                     </div>
-                    <a href="https://sevendyne.com/staffs.html" class="learn-more" target="_blank">Explore Staffing</a>
+                    <a href="https://sevendyne.com/staffs.html" class="learn-more" target="_blank">Explore Staffing Solutions</a>
                 </div>
                  
                 <div class="client-card">
@@ -61,7 +61,7 @@
                         <span class="tech-tag">Agile Methodologies</span>
                         <span class="tech-tag">Certification Prep</span>
                     </div>
-                    <a href="https://sevendyne.com/skills.html" class="learn-more" target="_blank">Explore Training</a>           
+                    <a href="https://sevendyne.com/skills.html" class="learn-more" target="_blank">Explore Skills Development</a>           
                 </div>
             
                 <div class="client-card">
@@ -73,7 +73,7 @@
                         <span class="tech-tag">Technical Advisory</span>
                         <span class="tech-tag">Continuous Learning</span>
                     </div>
-                    <a href="https://sevendyne.com/softs.html" class="learn-more" target="_blank">Explore Support</a>
+                    <a href="https://sevendyne.com/softs.html" class="learn-more" target="_blank">Explore Soft Support</a>
                 </div>
             </div>
         </section>
