--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
             <nav class="navbar">
                 <a href="#" class="logo">
                     <i class="fas fa-laptop-code fa-2x" style="color: #1a2a6c;"></i>
-                    <h1>Sevendyne <span>Consultancy Services LLP</span></h1>
+                    <div class="logo-text">
+                        <h1>Sevendyne</h1>
+                        <span>Consultancy Services LLP</span>
+                    </div>
                 </a>
                 <ul class="nav-links">
                     <li><a href="#works">Our Works</a></li>
@@ -24,6 +27,14 @@
             </nav>
         </div>
     </header>
+
+    <section class="download-section">
+        <div class="container contact-item">
+            <a href="Sevendyne Brochure.pdf" download class="cta-button">
+                <i class="fas fa-file-pdf"></i> Download Brochure
+            </a>
+        </div>
+    </section>
 
     <div class="container">
         <section class="hero">
