--- a/staffs.html
+++ b/staffs.html
@@ -28,7 +28,7 @@
         </div>
       </div>
       <div class="contact-item">
-          <a href="Sevendyne Staffs Brochure.pdf" download class="cta-button">
+          <a href="Sevendyne Brochure.pdf" download class="cta-button">
               <i class="fas fa-file-pdf"></i> Download Brochure
           </a>
       </div>
@@ -170,7 +170,7 @@
           <h3>Resources</h3>
           <ul class="footer-links">
               <li>
-                  <a href="Sevendyne Staffs Brochure.pdf" download>
+                  <a href="Sevendyne Brochure.pdf" download>
                       <i class="fas fa-file-pdf"></i> Download Brochure
                   </a>
               </li>
