--- a/skills.html
+++ b/skills.html
@@ -13,8 +13,7 @@
       <div class="company-brand">
         <div class="logo">SA</div>
         <div class="company-name">
-          <h1>Sevendyne Skills</h1>
-          <p>Technology Training | Internship | Skill Development</p>
+        <h1><a href="https://sevendyne.com" target="_blank" style="text-decoration: none; color: inherit;">Sevendyne</a></h1>          <p>Technology Training | Internship | Skill Development</p>
         </div>
       </div>
       <div class="contact-info">
@@ -28,7 +27,7 @@
         </div>
       </div>
       <div class="contact-item">
-          <a href="Sevendyne Skills Brochure.pdf" download class="cta-button">
+          <a href="Sevendyne Brochure.pdf" download class="cta-button">
               <i class="fas fa-file-pdf"></i> Download Brochure
           </a>
       </div>
@@ -170,7 +169,7 @@
           <h3>Resources</h3>
           <ul class="footer-links">
               <li>
-                  <a href="Sevendyne Skills Brochure.pdf" download>
+                  <a href="Sevendyne Brochure.pdf" download>
                       <i class="fas fa-file-pdf"></i> Download Brochure
                   </a>
               </li>
