--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <span class="tech-tag">Cloud Architects</span>
                         <span class="tech-tag">Design Specialists</span>
                     </div>
-                    <a href="https://sevendyne.com/staffs.html" class="learn-more" target="_blank">Explore Staffing Solutions</a>
+                    <a href="https://sevendyne.com/staffs.html" class="learn-more">Explore Staffing Solutions</a>
                 </div>
                  
                 <div class="client-card">
@@ -69,7 +69,7 @@
                         <span class="tech-tag">Agile Methodologies</span>
                         <span class="tech-tag">Certification Prep</span>
                     </div>
-                    <a href="https://sevendyne.com/skills.html" class="learn-more" target="_blank">Explore Skills Development</a>           
+                    <a href="https://sevendyne.com/skills.html" class="learn-more">Explore Skills Development</a>           
                 </div>
             
             </div>
