--- a/skills.html
+++ b/skills.html
@@ -13,7 +13,7 @@
       <div class="company-brand">
         <div class="logo">SA</div>
         <div class="company-name">
-        <h1><a href="https://sevendyne.com" target="_blank" style="text-decoration: none; color: inherit;">Sevendyne</a></h1>          <p>Technology Training | Internship | Skill Development</p>
+        <h1><a href="https://sevendyne.com" style="text-decoration: none; color: inherit;">Sevendyne</a></h1>          <p>Technology Training | Internship | Skill Development</p>
         </div>
       </div>
       <div class="contact-info">
