--- a/staffs.html
+++ b/staffs.html
@@ -13,7 +13,7 @@
       <div class="company-brand">
         <div class="logo">SA</div>
         <div class="company-name">
-        <h1><a href="https://sevendyne.com" target="_blank" style="text-decoration: none; color: inherit;">Sevendyne</a></h1>          <p>Remote Staffing | Team Building | Payroll Management</p>
+        <h1><a href="https://sevendyne.com" style="text-decoration: none; color: inherit;">Sevendyne</a></h1>          <p>Remote Staffing | Team Building | Payroll Management</p>
         </div>
       </div>
       <div class="contact-info">
