--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <header>
           <div class="container">
             <nav class="navbar">
-              <a href="#" class="logo">
-                <i class="fas fa-laptop-code fa-2x" style="color: #1a2a6c;"></i>
+             <a href="#" class="logo">
+                <img src="logo.png" alt="Sevendyne Logo" class="logo-img">
                 <div class="logo-text">
                   <h1>Sevendyne</h1>
                   <span>Consultancy Services LLP</span>
