--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <header>
           <div class="container">
             <nav class="navbar">
-             <a href="#" class="logo">
+             <a href="#home" class="logo">
                 <img src="logo.png" alt="Sevendyne Logo" class="logo-img">
               </a>
         
@@ -30,7 +30,7 @@
     </header>
 
     <div class="container">
-        <section class="hero">
+        <section id="home" class="hero">
             <div class="hero-content">
                 <h2>Tech Talent & Development Solutions</h2>
                 <p>Empowering businesses since 2012 with comprehensive staffing solutions, technical skills training, and ongoing support for development and design teams.</p>
