--- a/staffs.html
+++ b/staffs.html
@@ -13,7 +13,9 @@
       <div class="company-brand">
         <div class="logo">SA</div>
         <div class="company-name">
-        <h1><a href="https://sevendyne.com" style="text-decoration: none; color: inherit;">Sevendyne</a></h1>          <p>Remote Staffing | Team Building | Payroll Management</p>
+         <a href="https://sevendyne.com" class="logo">
+                <img src="logo.png" alt="Sevendyne Logo" class="logo-img">
+          </a>        
         </div>
       </div>
       <div class="contact-info">
