--- a/staffs.html
+++ b/staffs.html
@@ -15,7 +15,8 @@
         <div class="company-name">
          <a href="https://sevendyne.com" class="logo">
                 <img src="logo.png" alt="Sevendyne Logo" class="logo-img">
-          </a>        
+          </a>   
+          <p>Remote Staffing | Team Building | Payroll Management</p>
         </div>
       </div>
       <div class="contact-info">
