--- a/skills.html
+++ b/skills.html
@@ -10,14 +10,9 @@
 <body>
   <header>
     <div class="header-content">
-      <div class="company-brand">
-        <div class="company-name">
            <a href="https://sevendyne.com" class="logo">
                 <img src="logo.png" alt="Sevendyne Logo" class="logo-img">
-              </a>
-          <p>Technology Training | Internship | Skill Development</p>
-        </div>
-      </div>
+            </a>
       <div class="contact-info">
         <div class="contact-item">
           <i class="fas fa-envelope"></i>
@@ -41,7 +36,8 @@
     <div class="section-content">
       <div class="company-intro">
         <div class="company-details">
-          <h2>Empowering Future Technologists</h2>
+          
+           <h2>Technology Training | Internship | Skill Development</h2>
           <p>At Sevendyne, we specialize in training young talents and professionals in full-stack development, cloud deployment, and content creation. We bridge the gap between academia and industry by providing real-world, hands-on mentorship.</p>
 
           <div class="highlight-box">
