--- a/skills.html
+++ b/skills.html
@@ -8,28 +8,28 @@
   <link rel="stylesheet" href="stylepages.css"/>
 </head>
 <body>
-  <header>
-    <div class="header-content">
-           <a href="https://sevendyne.com" class="logo">
-                <img src="logo.png" alt="Sevendyne Logo" class="logo-img">
-            </a>
-      <div class="contact-info">
-        <div class="contact-item">
-          <i class="fas fa-envelope"></i>
-          <span>hr@sevendyne.com</span>
-        </div>
-        <div class="contact-item">
-          <i class="fas fa-phone"></i>
-          <span>+919544139564</span>
-        </div>
+ <header>
+  <div class="header-content">
+    <a href="https://sevendyne.com" class="logo">
+      <img src="logo.png" alt="Sevendyne Logo" class="logo-img">
+    </a>
+    <div class="contact-info">
+      <div class="contact-item">
+        <i class="fas fa-envelope"></i>
+        <span>hr@sevendyne.com</span>
       </div>
       <div class="contact-item">
-          <a href="Sevendyne Brochure.pdf" download class="cta-button">
-              <i class="fas fa-file-pdf"></i> Download Brochure
-          </a>
+        <i class="fas fa-phone"></i>
+        <span>+91 95441 39564</span>
       </div>
     </div>
-  </header>
+    <div class="contact-item brochure-btn">
+      <a href="Sevendyne Brochure.pdf" download class="cta-button">
+        <i class="fas fa-file-pdf"></i> Download Brochure
+      </a>
+    </div>
+  </div>
+</header>
 
   <div class="container">
     <div class="section-title">About Our Training Program</div>
